# omega_rust

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
src/: audio.rs  enemies.rs  font.rs  fx.rs  game.rs  headless.rs  hiscore.rs  main.rs  particles.rs  rng.rs  sim.rs  vector.rs
src/sim/: render.rs
verify/: attract.script  death.script  flight.script  mute.script  run.sh  wave1.script
web/: build.sh  index.html
