[package]
name = "omega_rust"
version = "0.2.0"
edition = "2021"
description = "A vector-graphics homage to Omega Race (Midway, 1981), in Rust"
license = "MIT"

[dependencies]
macroquad = { version = "0.4.15", features = ["audio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
